=======
CHANGES
=======

3.7.1 (unreleased)
------------------

- Fix translation domains translating a message for a different domain. In the
  process, fix testMessageIDTranslateForDifferentDomain which seemed to work by
  mistake as the "other" and "default" domains used the same catalog. This is
  basically a reversion of 39991.


3.7.0 (2009-03-18)
------------------

- Updated locale data to CLDR 1.1. This introduces contextual month
  and day names and different month/day name widths. More CLDR updates
  are expected, see the "nadako-cldr" branch of zope.i18n.

- Add `configure.zcml` that registers standard negotiator utility and includes
  ``zope.i18n.locales`` configuration. This was previously done by
  ``zope.app.i18n``.


3.6.0 (2008-10-26)
------------------

- Fixed a test failure in the compile mo file support.

- Move the zcml support into an extra. This reduces the dependencies of a
  standard zope.i18n install by half a dozen packages.


3.5.0 (2008-07-10)
------------------

- Feature: Added new top-level negotiate function, which can be used to
  negotiate the language when the available languages are set globally via
  `zope_i18n_allowed_languages`.

- Feature: Added support for restricting the available languages. We support
  an environment variable called `zope_i18n_allowed_languages` now, which is
  a list of comma or space separated language codes. If the environment
  variable is set, the ZCML registration will only process those folders
  which are in the allowed languages list.

- Feature: Added optional automatic compilation of mo files from po files.
  You need to depend on the `zope.i18n [compile]` extra and set an environment
  variable called `zope_i18n_compile_mo_files` to any True value to enable
  this option.

- Feature: Re-use existing translation domains when registering new ones.
  This allows multiple packages to register translations in the same domain.